--- a/danmu/danmu.html
+++ b/danmu/danmu.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>弹幕墙</title>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="./danmu.css">
 </head>
 <body >
-    <div class="qiang">
-    </div>
+    <div class="xianshi">
+    <div id="qiang"  class="qiang"> </div>
     <div  class="qiang-xia">
         <input id="message" type="text" placeholder="发送弹幕" >
     <button id="sent">发送</button>
     <button id="clear">关闭弹幕</button>
     </div>
+</div>
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
 <script src="./danmu.js"></script>
 <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script> -->
