--- a/yemianbiaoqian.html
+++ b/yemianbiaoqian.html
@@ -28,7 +28,8 @@
         <span id="comDate"></span>|
         <span><i class="fa fa-cloud"></i> <b id="comWenDU">27摄氏度</b> </span>
       </p>
-    c
+      <div style="background-color: #7a2671;width: 200px;height: 200px;"></div>
+      <div style="background-color: #85d98f;width: 200px;height: 200px;" ></div>
     <script src="/wfwz/index.js"></script>
  </body>
  </html>
