--- a/yiju/yiju.html
+++ b/yiju/yiju.html
@@ -1,4 +1,4 @@
-<!-- 未完：  调用的诗句没有按有标点符号换行，且换行应缩进；颜色变换的动画 -->
+<!-- 完：  调用的诗句没有按有标点符号换行，且换行应缩进；应再简单化，或用数组形式？ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
