--- a/天气/tianqi.html
+++ b/天气/tianqi.html
@@ -42,7 +42,7 @@
             
   <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>   
    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-    <script src="./tianqi.js"></script> <!-- 加载jq的背景颜色动画插件 -->
+    <script src="./tianqi.js"></script> 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
   
